# vazafy

./: README.md
vazafy-api/: pyproject.toml
vazafy-api/app/: main.py
vazafy-api/app/core/: config.py
