[tool.poetry]
name = "vazafy-api"
version = "0.1.0"
description = ""
authors = ["Lucas Abdo <lucastro94+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
